changed example interface to eth0

--- a/ript.json.example
+++ b/ript.json.example
@@ -25,7 +25,7 @@
   "reject_with": "port-unreachable",
     "ipv4": {},
   "ipv6": {
-    "enp0s8": {
+    "eth0": {
 	"log_syn_in": "no",
 	"log_drop": "yes",
 	"log_reject": "yes",
